Bug 1207951 - Fix buggy logic in ComposeStyle; r=heycam